correct-background-3section

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </ul>
       </section>
       <!-- 4Divelopera IMG -->
-      <section>
+      <section class="characters-developers">
         <h2 class="logo-ourteam">Our Team</h2>
         <ul>
           <li>
