--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           >Web<span class="logo-part">Studio</span></a
         >
         <ul>
-          <li><a class="nav-link" href="">Studio</a></li>
+          <li><a class="nav-link" href="./index.html">Studio</a></li>
           <li><a class="nav-link" href="">Portfolio</a></li>
           <li><a class="nav-link" href="">Contacts</a></li>
         </ul>
@@ -92,7 +92,7 @@
       <section class="characters-developers">
         <h2 class="logo-ourteam">Our Team</h2>
         <ul>
-          <li>
+          <li class="character-fon">
             <img
               class="img-character"
               src="./images/character/markguerrero.jpg"
@@ -103,7 +103,7 @@
             <h3 class="character-name">Mark Guerrero</h3>
             <p class="character-post">Product Designer</p>
           </li>
-          <li>
+          <li class="character-fon">
             <img
               class="img-character/"
               src="./images/character/tomford.jpg"
@@ -114,7 +114,7 @@
             <h3 class="character-name">Tom Ford</h3>
             <p class="character-post">Frontend Developer</p>
           </li>
-          <li>
+          <li class="character-fon">
             <img
               class="img-character"
               src="./images/character/camilagarcia.jpg"
@@ -125,7 +125,7 @@
             <h3 class="character-name">Camila Garcia</h3>
             <p class="character-post">Marketing</p>
           </li>
-          <li>
+          <li class="character-fon">
             <img
               class="img-character"
               src="./images/character/danielwilson.jpg"
@@ -141,7 +141,7 @@
       <section>
         <h2 class="title-portfolio">Our Portfolio</h2>
         <ul>
-          <li>
+          <li class="portfolio-fon">
             <img
               src="./images/ourportfolio/banking.jpg"
               alt="banking"
@@ -151,7 +151,7 @@
             <h3 class="name-portfolio">Banking App</h3>
             <p class="name-portfolio-description">App</p>
           </li>
-          <li>
+          <li class="portfolio-fon">
             <img
               src="./images/ourportfolio/cashless.jpg"
               alt="cashless"
@@ -161,7 +161,7 @@
             <h3 class="name-portfolio">Cashless Payment</h3>
             <p class="name-portfolio-description">Marketing</p>
           </li>
-          <li>
+          <li class="portfolio-fon">
             <img
               src="./images/ourportfolio/meditation.jpg"
               alt="meditation"
@@ -171,7 +171,7 @@
             <h3 class="name-portfolio">Meditation App</h3>
             <p class="name-portfolio-description">App</p>
           </li>
-          <li>
+          <li class="portfolio-fon">
             <img
               src="./images/ourportfolio/taxi.jpg"
               alt="taxi"
@@ -181,7 +181,7 @@
             <h3 class="name-portfolio">Taxi Service</h3>
             <p class="name-portfolio-description">Marketing</p>
           </li>
-          <li>
+          <li class="portfolio-fon">
             <img
               src="./images/ourportfolio/screen.jpg"
               alt="screen"
@@ -191,7 +191,7 @@
             <h3 class="name-portfolio">Screen Illustrations</h3>
             <p class="name-portfolio-description">Design</p>
           </li>
-          <li>
+          <li class="portfolio-fon">
             <img
               src="./images/ourportfolio/online.jpg"
               alt="online"
